# CodeCraftAI

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  00_AI_CONTEXT_MANIFEST.md  AIAgents.en.md  AIAgents.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  INSTALL.en.md  INSTALL.zh.md  LICENSE  README.en.md  README.md  README.zh.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.codecraft/: protected_paths.yml  workflow.yml
.codecraft/adr/: template.md
.codecraft/docs/: 04-error-handling-and-logging-standard.md  04-error-handling-and-logging-standard.zh.md  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
designs/: README.md
docs/: DEPLOYMENT.md  custom-template-language-guide.md  semantic-tag-directives-guide.md
kb/: README.md  _index.md  template.md
openspec/: README.md  WORKFLOW.md  template.md
project_logs/: ai_interactions.md  team_discussions.md
requirements/: dev.txt
scripts/: build.sh  generate_api_docs.py  guardian.py  index_kb.py
site/: 404.html  objects.inv  sitemap.xml
specs/: README.md  affiliate-marketing-article.md  ai-writing-standard.md  amazon-affiliate-article.md  comparison-post.md  diversified-creation-mode.md  how-to-guide.md  knowledge-base-construction.md  knowledge-contribution-guide.md  listicle-article.md  niche-site-seed-accelerator.md  post-mortem-analysis.md  seo-content-revision.md  style-and-tone-guide.md  template-ai-profile.md  template.en.md  template.legacy.md  template.md  topic-dominance-profile.md  topic-domination-profile.md  what-is-article.md
tasks/: template.en.md  template.md  template.zh.md
(+69 files in other folders)
