[project]
name = "CodeCraftAI"
version = "0.1.0"
description = "Develop an AI-assisted programming tool that automates code generation, optimizes existing code, and provides real-time debugging suggestions."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
    "pip-tools",
]
