[project]
name = "CodeCraftAI"
version = "0.1.0"
description = "A comprehensive, standardized Python project template for AI-assisted software development."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
    "pip-tools",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "watchdog",
    "toml",
    "mypy",
    "pytest-cov",
    "click",
    "pyyaml",
]
